# llm-device-estimate

./: .gitignore  README.md  STARTUP.md  dev.sh  developer.md  main.py  package.json  pyproject.toml  start.sh  stop.sh
core/backend/: README.md  requirements.txt  run_server.py  test_api.py  test_api.py.bak  test_basic.py
core/backend/app/: __init__.py  config.py  main.py
core/backend/app/api/: __init__.py  deps.py
core/backend/app/api/v1/: __init__.py  api.py
core/backend/app/models/: __init__.py  common.py  inference.py  training.py
core/backend/app/services/: __init__.py  model_registry.py
core/backend/app/services/calculator/: __init__.py  base_calc.py  base_calc.py.bak  inference_calc.py  inference_calc.py.bak  training_calc.py  training_calc.py.bak
core/backend/app/utils/: __init__.py  constants.py  helpers.py  helpers.py.bak  validators.py  validators.py.bak
core/front/: .eslintrc.json  README.md  env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
core/front/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
core/front/src/app/inference/: page.tsx
core/front/src/app/training/: page.tsx
core/front/src/components/: theme-provider.tsx
core/front/src/components/features/: result-display.tsx  result-display.tsx.bak
core/front/src/components/layout/: navigation.tsx
core/front/src/components/ui/: badge.tsx  button.tsx  donate.tsx  form.tsx  (+2 more)
core/front/src/lib/: api.ts  utils.ts
core/front/src/store/: inference.ts  training.ts
core/front/src/types/: api.ts
core/gpu-data/: gpu.json
(+4 files in other folders)
